kustomize/base/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: styx-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: styx-backend
  template:
    metadata:
      labels:
        app: styx-backend
    spec:
      imagePullSecrets:
        - name: backend-credentials
      containers:
        - name: styx-backend
          image: docker.io/nickmansrob1205/peno3
          volumeMounts:
            - mountPath: /usr/src/app/prisma
              name: styx-backend-volume
          imagePullPolicy: IfNotPresent
          args:
            - start-server
            - backend
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
      volumes:
        - name: styx-backend-volume
          persistentVolumeClaim:
            claimName: backend-pvc
