kustomize/base/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  type: NodePort
  selector:
    app: styx-backend
  ports:
    - name: https
      protocol: TCP
      port: 443
      nodePort: 30080
      targetPort: 3000
