kustomize/base/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  tls:
  - hosts:
    - styx.rndevelopment.be
    secretName: wildcard-cert
  rules:
  - host: styx.rndevelopment.be
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-api
            port:
              number: 3000
